# nfsu2-re-y

./: .gitignore  .gitmodules  CMakeLists.txt  NOTES.md  SPEED2B.CT  SPEED2B.EXE.type.idc
docs/: README.md  indexold.html
ext/: CMakeLists.txt  README.md  UG2Addresses.md  WidescreenFixes-v2.md  WidescreenFixes.md
nfsu2-re-gamefile-explorer/src/u2gfe/: Structures.java
nfsu2-re-hooks/: CMakeLists.txt  a_log.c  a_main.c  a_utils.c  dbgw_a_main.c  debug-custom-dump-markers.c  debug-custom-dump-smsdata.c  debug-custom-find-nearest-marker.c  debug-custom-getkeyname.c  debug-custom-send-instruction-sms.c  debug-custom-uielementvisitor.c  debug-hook-wm_char.c  hook-43DB50-hash-cs.c  hook-440B40-AllocateAndInitPool.c  hook-4691C0-DebugPrint.c  hook-505450-hash-ci.c  hook-50B9C0-hash-ci.c  hook-511E60-GetLogoForCarModel.c  hook-52CEF0-GetFNGInfoByName.c  hook-535FE0-UILabel__setString.c  hook-555D00-AddFNGToUIObject.c  hook-55B5C0-FNGObject__BaseNotify.c  hook-55DC20-SendSomethingToFNG.c  hook-57CAC0-SomethingWithABinFile.c  hook-fileapi.c  hook-realcore-filesystem.c  replace-440BB0-Pool__Extend.c  replace-440DF0-CreatePool.c  replace-50B790-CreateFNGObject.c  replace-50D510-DebugPrint.c  replace-5149C0-GetSmsMessageSubject.c  replace-514B00-GetSmsMessageBody.c  winconsole.c
